# backend/app/models/epg_model.go
@@ -2,12 +2,13 @@ package models
 
 // Channel struct to describe Playlist object.
 type Epg struct {
-	ID   int64  `db:"id" json:"id"`
-	Name string `db:"name" json:"name" validate:"required,lte=255"`
-	URL  string `db:"url" json:"url" validate:"required,lte=255"`
+	ID    int64  `db:"id" json:"id"`
+	Name  string `db:"name" json:"name" validate:"required,lte=255"`
+	URL   string `db:"url" json:"url" validate:"required,lte=255"`
+	Order int64  `db:"orderr" json:"orderr"`
 }
 
-type EpgCreateParam struct {
+type EpgAddParam struct {
 	Name string `json:"name" validate:"required,lte=255"`
 	URL  string `json:"url" validate:"required,lte=255"`
 }
